@@ -5,6 +5,7 @@
     * Depend on Python 3 compatible libraries.
     * Wrap function introspection for Python 3 compatibility.
     * Specify explicit text or binary mode when opening files.
+    * Preserve exception context in custom exceptions.
 
 2014-12-20  Ben Finney  <ben+python@benfinney.id.au>
 
